php css en db fix
het versturen van gegevens vanuit de contact pagina werkt nu, de contact pagina heeft een mooie opmaak gekregen.

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
       <nav>
         <ul>
           <li><a href="index.html">Portfolio</a></li>
-          <li><a href="contact.html">Contact Opnemen</a></li>
+          <li><a href="contact.php">Contact Opnemen</a></li>
         </ul>
       </nav>
     </header>
